--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,4 +2,9 @@ version: '3'
 
 services:
   app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./app:/app
     command: ["npm", "run", "dev"]
