--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 
 services:
   app:
-    image: app
+    image: forward32/devops-for-programmers-project-74
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.production
     volumes:
       - ./app:/app
     command: ["npm", "test"]
