--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,9 @@ jobs:
 
       - name: run tests
         run: make test
+
+      - name: docker login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
