--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,19 @@ jobs:
       - name: run tests
         run: make test
 
+      - name: docker buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: docker login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.production
+          push: true
+          tags: "forward32/devops-for-programmers-project-74:latest"
