--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,3 +8,12 @@ services:
     volumes:
       - ./app:/app
     command: ["npm", "run", "dev"]
+  caddy:
+    image: caddy:latest
+    volumes:
+      - ./services/caddy/Caddyfile:/etc/caddy/Caddyfile
+    ports:
+      - 80:80
+      - 443:443
+    depends_on:
+      - app
