feat(project): step 6 - postgres

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./app:/app
-    command: ["npm", "run", "dev"]
+    command: "bash -c 'sleep 5 && npm start'"
   caddy:
     image: caddy:latest
     volumes:
