--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.production
-    command: ["npm", "test"]
+    command: "bash -c 'sleep 5 && npm test'"
+    depends_on:
+      - db
+  db:
+    image: postgres:latest
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
